fix: double scroll bars on guides page
Fixes that the guides page has two scroll bars on Windows.

Fixes https://github.com/angular/components/issues/21902.

--- a/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/pages/guide-list/guide-list.scss
+++ b/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/pages/guide-list/guide-list.scss
@@ -1,11 +1,8 @@
 @import '../../../styles/constants';
 
-:host {
-  min-height: 100%;
-}
-
+:host,
 .docs-guide {
-  min-height: 100%;
+  height: 100%;
 }
 
 .docs-guide-list {
